systemdunit_DATA =
if INSTALL_CGISERV
systemdunit_DATA += moosefs-ce-cgiserv.service
endif
if BUILD_CHUNKSERVER
systemdunit_DATA += moosefs-ce-chunkserver.service
endif
if BUILD_MASTER
systemdunit_DATA += moosefs-ce-master.service
endif
if BUILD_METALOGGER
systemdunit_DATA += moosefs-ce-metalogger.service
endif
